--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "scss": "node-sass --watch --output-style=compressed scss -o css --recursive"
+    "scss": "node-sass --watch --output-style=expanded scss -o css --recursive"
   },
   "keywords": [],
   "author": "aoliadi",
